force-app/main/default/objects/cpm__Job__c/cpm__Job__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <displayFormat>JOB-{0}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>