force-app/main/default/objects/cpm__Job__c/fields/cpm__Async_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Async_Apex_Job_Id__c</fullName>
    <label>Async Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>