force-app/main/default/objects/cpm__Job__c/fields/cpm__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>