force-app/main/default/objects/cpm__Job__c/fields/cpm__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>