force-app/main/default/objects/cpm__Job__c/fields/cpm__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>cpm__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>