force-app/main/default/objects/cpm__Job__c/fields/cpm__Group_Identifier__c.field-meta.xml
<CustomField>
    <fullName>cpm__Group_Identifier__c</fullName>
    <label>Group Identifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>