force-app/main/default/objects/cpm__Job__c/fields/cpm__Payload__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payload__c</fullName>
    <label>Payload</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>