force-app/main/default/objects/cpm__Job__c/fields/cpm__Queued__c.field-meta.xml
<CustomField>
    <fullName>cpm__Queued__c</fullName>
    <label>Queued</label>
    <type>DateTime</type>
</CustomField>