force-app/main/default/objects/cpm__Job__c/fields/cpm__Retries__c.field-meta.xml
<CustomField>
    <fullName>cpm__Retries__c</fullName>
    <label>Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>