force-app/main/default/objects/cpm__Job__c/fields/cpm__Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Enqueued</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>