force-app/main/default/objects/cpm__Job__c/fields/cpm__Total_Records__c.field-meta.xml
<CustomField>
    <fullName>cpm__Total_Records__c</fullName>
    <label>Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>