force-app/main/default/objects/cpm__Job__c/fields/cpm__Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>